--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description"
         content="Welcome to Home | Mayank Vikash. My own website made with HTML, CSS and JavaScript.">
 
+    <meta name="lang" content="en-us">
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="Mayank Vikash">
@@ -59,16 +61,8 @@
             }
         }
     </script>
-
-
-    <link rel="stylesheet" href="/assets/css/website.css">
-
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/website-2022.css">
+    <link rel="stylesheet" href="assets/css/website-2022-additional.css">
 
 </head>
 
@@ -86,119 +80,175 @@
                     <a class="nav-link" href="https://mayankvikash.ml#contact">Contact</a>
                     <a class="nav-link" href="https://mayankvikash.ml/news">News</a>
                     <a class="nav-link" href="https://mayankvikash.ml/posts">Blog</a>
-
                 </div>
             </div>
         </div>
     </nav>
 
-    <div id="home">
-        <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <h1 class="home-title">Mayank Vikash</h1> <br>
-        <p class="home-desc">Just a random guy who loves making websites!</p> <br>
-        <p class="home-news-text">Get the latest updates</p>
-        <h4 class="home-news">
-            <p><a class="home-news-link" href="/news" target="_blank">News</a> &nbsp; &nbsp; &nbsp; &nbsp; <a
-                    class="home-news-link" href="/posts" target="_blank">Blog</a> </p>
-        </h4>
-    </div>
-    <div id="about">
-        <h3>About</h3>
-        <div class="about-bio">
-            <p>I am good in Front-End, I like making new designs and websites. I have leant numbers of Front-End
-                Technologies like JavaScript, ReactJS, JQuery and CSS.
-            </p>
-            <p>I also know some Back-End languagues like PHP and Python, but not completely 😅. Btw, this portfolio
-                is made in HTML, CSS and JavaScript (or better, this is a static site).</p>
-            <p>You may be wondering, how I learnt all these things (literally, every person I meet asks this 😂).
-                So, I got the interest in Front-End during lockdown, like everyone, I was scrolling YouTube and then
-                I got recommended a video from CodeWithHarry, I was curious what that meant so I clicked it, first I
-                didn't understood anything but soon I learnt the basic of OOPs. The first video I watched about
-                programming was JavaScript.</p>
-            <p>Currently, I am completing the challenges in <a href="https://freecodecamp.org">FCC</a> for Front-End
-                Certification. I know Front-End so I can be called a Front-End Developer but still I don't have a
-                certificate, I will apply for the certificate soon.</p>
-                <p>I am also learning Game and App Development. Thanks for reading :)</p>
-            <h3>Social Links</h3>
-            <p>I am available on these places, you can check out my profiles:</p>
+    <div class="container">
+
+        <div id="home">
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <h1 class="home-title">Mayank Vikash</h1> <br>
+            <p class="home-desc">Just a random guy who loves making websites!</p> <br>
+            <p class="home-news-text">Get the latest updates</p>
+            <h4 class="home-news">
+                <p> <br> <a class="web-link" href="/news" target="_blank"><button type="button"
+                            class="btn btn-primary">News</button></a> &nbsp; &nbsp; &nbsp; &nbsp; <a class="web-link"
+                        href="/posts" target="_blank"><button type="button" class="btn btn-primary">Blog</button></a>
+                </p>
+            </h4>
+        </div>
+        <div id="about">
+            <h3>About</h3>
+            <p>I am a student developer currently, learning game development in Unity.
+                I love making designs and developing websites. I have learned multiple languages like HTML, CSS,
+                Javascript, PHP, Java, and frameworks like ReactJS, NextJS, JQuery.</p>
+            <p>Not only cool websites, I also love writing. I have wrote number of essays which are published on my
+                Blogspot.</p>
+            <p>I have made number of projects with the help of Front-End Technologies, some of them are:</p>
+
+            <div class="card-group">
+                <div class="card">
+
+                    <div class="card-body">
+                        <h5 class="card-title">M SHORTS</h5>
+                        <p class="card-text">M SHORTS is a free video sharing platform, it was created with the aim of
+                            providing quality videos for free.</p>
+
+                    </div>
+                </div>
+                <div class="card">
+
+                    <div class="card-body">
+                        <h5 class="card-title">URLRealm</h5>
+                        <p class="card-text">A free URL Shortener by Mayank Vikash. Currently, Under Development</p>
+
+                    </div>
+                </div>
+                <div class="card">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Game (Name is not decided yet)</h5>
+                        <p class="card-text">An online game that runs in your browser.</p>
+
+                    </div>
+                </div>
+            </div>
+            <br>
+            <p>Currently, I am learning Game Development in Unity and also making my own game. Check out the posts
+                section, I wil keep writing there about my progress.</p>
             <p>
+                Few months ago, I published my own app on Amazon App Store and APKPure, It was the android version of M
+                SHORTS which I created with Java in Android Studio. Link to M SHORTS <a class="web-link"
+                    href="https://www.amazon.in/Mayank-Vikash-M-SHORTS/dp/B09GKXYF8M/">android version.</a>
+            </p>
+            <p>
+                I have also posted some Front-End Projects on my <a href="https://codepen.io/mayankvikash"
+                    class="web-link">Codepen</a>
+            </p>
+            <p>
+                I have made this <a href="https://github.com/MayankVikash/Projects" class="web-link">GitHub Repo</a> to
+                showcase my projects in various languages like, Java, PHP, Python etc.
+            </p>
+        </div>
+
+        <div id="contact">
+            <h3>Contact</h3>
+            <p>
+                I am active on multiple platforms, you can check out my profile:
+
             <ul>
-                <li>I use GitHub the most, check out my <a class="social-links"
+
+                <li>I use GitHub the most, check out my <a class="web-link"
                         href="https://github.com/mayankvikash">repositories</a></li>
-                <li>I tweet random things on <a class="social-links"
-                        href="https://twitter.com/mayankvikash1">Twitter</a></li>
-                <li>I love writing essays, check out my <a class="social-links"
+                <li>I tweet random things on <a class="web-link" href="https://twitter.com/mayankvikash1">Twitter</a>
+                </li>
+                <li>I love writing essays, check out my <a class="web-link"
                         href="https://mayankvikash.blogspot.com/">Blogspot</a></li>
-                <li>Check out my profile on <a class="social-links" href="https://dev.to/mayankvikash">Dev.to</a></li>
-                <li>I post videos about my projects on <a class="social-links"
+                <li>Check out my profile on <a class="web-link" href="https://dev.to/mayankvikash">Dev.to</a></li>
+                <li>I post videos about me on <a class="web-link"
                         href="https://www.youtube.com/channel/UCzzy9siWUUPmQeLOsxZcuAA">YouTube</a></li>
-                <li>Check out my articles on <a class="social-links" href="https://medium.com/@MayankVikash">Medium</a></li>
-                <li>Check out my <a class="social-links" href="https://www.linkedin.com/in/mayank-vikash-466972200">LinkedIn</a></li>
-                <li><a class="social-links" href="https://g.co/kgs/SggE71">Knowledge Panel</a></li>
+                <li>Check out my articles on <a class="web-link" href="https://medium.com/@MayankVikash">Medium</a>
+                </li>
+                <li>Check out my profile on <a class="web-link"
+                        href="https://www.linkedin.com/in/mayank-vikash-466972200">LinkedIn</a></li>
+                <li>Check out my <a class="web-link" href="https://g.co/kgs/SggE71">Knowledge Panel</a></li>
+
+                <li>I am also available on <a class="web-link"
+                        href="https://www.reddit.com/user/Mayank-Vikash">Reddit</a></li>
+
+                <li>
+                    Check out my <a class="web-link" href="https://mayankvikash.hashnode.dev/">Hashnode</a>
+                </li>
             </ul>
             </p>
-            <table class="GeneratedTable">
+            <p>
+                You can also send an email to admin@mayankvikash.ml <a class="web-link"
+                    href="mailto:admin@mayankvikash.ml">(Click
+                    here to send) </a>
+            </p>
+        </div>
 
-                <thead>
-                    <tr>
-                        <td>Name</td>
-                        <td>Mayank Vikash</td>
+        <div id="footer">
+            <br>
+            <p>
+            <div class="card text-center">
+                <h5 class="card-header">Featured from Post</h5>
+                <div class="card-body">
+                    <h5 class="card-title">Report Card Program in Java.</h5>
+                    <p class="card-text">Learn how to make a report card in Java (with Source Code).</p>
+                    <a href="/posts/simple-report-card-in-java.html" class="btn btn-primary">Check it out</a>
+                </div>
+            </div>
+            </p>
 
-                    </tr>
+            <p>
+            <div class="card text-center">
+                <h5 class="card-header">Featured from News</h5>
+                <div class="card-body">
+                    <h5 class="card-title">URLRealm Announcement.</h5>
+                    <p class="card-text">Get latest updates about URLRealm.</p>
+                    <a href="/news/urlrealm.html" class="btn btn-primary">Check it out</a>
+                </div>
+            </div>
+            </p>
 
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Logo</td>
-                        <td><img id="table-mylogo-image" src="https://mayankvikash.ml/assets/images/logo.png" alt="Mayank Vikash Logo" srcset=""></td>
-                    </tr>
-                    <tr>
-                        <td>Born</td>
-                        <td>16th August, 2007</td>
-                    </tr>
-                    <tr>
-                        <td>Age</td>
-                        <td>15</td>
-                    </tr>
-
-
-                </tbody>
-            </table>
-
+            <footer>
+                <p>
+                    <br>
+                    <img src="https://mayankvikash.ml/assets/images/logo.png" class="img-fluid" alt="Mayank Vikash">
+                    <br>
+                    Bio: I am a web developer and creator of M SHORTS, currently learning Game Development
+                    <br>
+                    <a class="web-link" href="/sitemap.xml">Sitemap</a> &nbsp; &nbsp; <a class="web-link"
+                        href="/sitemap.html">HTML Sitemap</a>
+                    <br> <br>
+                    ©2022 Mayank Vikash. Made with Front-End Technologies.
+                </p>
+            </footer>
 
         </div>
+
     </div>
 
-<div id="contact">
-    <h3>Contact</h3>
-    <p>Send suggestions, ask doubts or just have normal conversation with me. I would love to read your messages, Thanks for visiting my website :)</p>
-    <p>You can send an email to <a class="social-links" href="mailto:admin@mayankvikash.ml">admin@mayankvikash.ml</a></p>
-    <p>You can also contact me through the profile links.
-</p>
-</div>
-
-<div id="footer">
-    <footer>
-      <p>©2022 Mayank Vikash. All Rights Reserved. <br> Made by Mayank Vikash with Front-End Technologies.</p>
-      <p><a href="https://mayankvikash.ml/sitemap.xml">Sitemap</a> &nbsp; &nbsp; <a href="https://mayankvikash.ml/sitemap.html">HTML Sitemap</a></p>
-
-
-    </footer>
-</div>
-
-
-
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
