--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <footer>
                 <p>
                     <br>
-                    <img src="https://mayankvikash.ml/assets/images/logo.png" class="img-fluid" alt="Mayank Vikash">
+                    <img src="https://mayankvikash.ml/assets/images/logo.webp" class="img-fluid" alt="Mayank Vikash">
                     <br>
                     Bio: I am a web developer and creator of M SHORTS, currently learning Game Development
                     <br>
