--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     .content-main {
       position: absolute;
       width: 100%;
-      background: linear-gradient(0deg, rgba(39, 39, 39, 0.3), rgba(0, 0, 0, 0.3)), url("https://www.esa.int/var/esa/storage/images/19716864-11-eng-GB/ESA_root_pillars.jpg");
+      background: linear-gradient(0deg, rgba(39, 39, 39, 0.3), rgba(0, 0, 0, 0.3)), url("https://mayankvikash.ml/img/2022-portfolio-bg.webp");
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size: cover;
