--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta http-equiv="Refresh" content="0; url='https://mayankvikash.in'" />
 <link rel="canonical" href="https://mayankvikash.in/" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -227,14 +228,14 @@
         <p>
           <a href="https://hashnode.com/@MayankVikash">Hashnode</a> <br>
           <a href="https://hackernoon.com/u/mayankvikash">Hackernoon</a> <br>
-          <a href="https://dev.to/mayankvikash">Dev.to</a> <br>
+          <a href="https://mayankvikash.in">mayankvikash.in</a> <br>
           <a href="https://twitter.com/MayankVikash1">Twitter</a> <br>
           <a href="https://www.freecodecamp.org/mayankvikash">FreeCodeCamp</a> <br>
           <a href="https://in.linkedin.com/in/mayank-vikash-466972200">LinkedIn</a> <br>
           <a href="https://tealfeed.com/mayankvikash">Tealfeed</a> <br>
           <a href="https://github.com/MayankVikash">Github</a> <br>
           <a href="https://dev.mayankvikash.ml">dev.mayankvikash.ml</a> <br>
-          <a href="https://mayankvikash.ml/discussion">Discussion</a> <br>
+          <a href="https://mayankvikash.in/discussion">Discussion</a> <br>
         </p>
 
 
