--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
           <div class="col">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Simple Report Card in Java</h5>
-                <p class="card-text"><iframe src="https://mayankvikash.ml/posts/simple-report-card-in-java/"
+                <h5 class="card-title">mayankvikash.in</h5>
+                <p class="card-text"><iframe src="https://mayankvikash.in/"
                     frameborder="0"></iframe></p>
               </div>
             </div>
